--- a/src/CommandPalette.scss
+++ b/src/CommandPalette.scss
@@ -34,6 +34,10 @@
 
   ul {
     width: 100%;
+    height: calc(2.75rem * 5);
+    overflow-x: hidden;
+    overflow-y: auto;
+
     margin: 0;
     padding: 0;
     list-style: none;
@@ -49,6 +53,7 @@
 
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 
     &.cmd-palette-item--hide {
       display: none;
